fix calendar z-index bug; change landing index height to 100%

--- a/app/assets/stylesheets/index-page/date-picker.scss
+++ b/app/assets/stylesheets/index-page/date-picker.scss
@@ -381,3 +381,7 @@ $min-field-height: 38px;
   font-weight: bold;
   padding: 5px 0;
 }
+
+.datepicker__tether-element {
+  z-index: 2 !important;
+}
