--- a/app/assets/stylesheets/landing-page/landing-page.scss
+++ b/app/assets/stylesheets/landing-page/landing-page.scss
@@ -144,12 +144,12 @@ $top-push: 61px;
     background: black;
     position: absolute;
     width: 100%;
-    height: 810px;
+    height: 100%;
     box-shadow: 0 0 10px black;
 
     opacity: 0.76;
     padding: 25px;
-    top: 770px;
+    top: 94%;
 
     .scroll-down{
       h1{
@@ -157,7 +157,7 @@ $top-push: 61px;
         padding: 28px;
         font-weight: 200;
         letter-spacing: 3px;
-        padding-bottom: 60px;
+        padding-bottom: 50px;
       }
 
       width: 100%;
@@ -183,7 +183,7 @@ $top-push: 61px;
         font-size: 20px;
         color: rgb(103, 107, 109);
         transition: .3s all;
-        margin: 60px;
+        margin: 50px;
       }
 
       button:hover{
